# advent-of-code

./: Cargo.toml  readme.md  time-unit-test.sh
2021/: Cargo.toml
2021/inputs/: day-16-input.txt  day-21-input.txt
2021/src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_2.rs  day_21.rs  day_22.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs
2022/: time-test.sh
2022/src/: day_11.rs  day_12.rs  day_14.rs  day_15.rs  day_16.rs  day_19.rs  day_2.rs  day_24.rs  day_3.rs  day_6.rs  day_7.rs  day_8.rs  main.rs
2023/: Cargo.toml
2023/src/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  main.rs
src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs
utils/src/: coordinate.rs  coordinate_3d.rs  dijkstra.rs  file_utils.rs  lib.rs
