[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
itertools = "0.11.0"
slice-group-by = "0.3.1"
sscanf = "0.4.1"
strum = "0.25"
strum_macros = "0.25"
